--- a/과제/챌린지 12 - header.css
+++ b/과제/챌린지 12 - header.css
@@ -12,7 +12,7 @@ header.header{
     height: 4rem;
     padding: 0.75rem 1rem;
     margin: auto;
-    justify-content: space-between;
+    justify-content:flex-end
 }
 .header-content__nav{
     align-items: center;
@@ -28,3 +28,4 @@ header.header{
     display: inline-block;
     margin-right: 10px;
 }
+.header-content__profile
